# federated-learning-organamnist

./: README.md
organmnist-fl/: Analysis.ipynb  Untitled-1.ipynb  pyproject.toml  report.md  run_experiments.sh
organmnist-fl/pytorchexample/: client_app.py  server_app.py  task.py
