[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "organmnist-fl"
version = "1.0.0"
description = "Federated Learning con OrganAMNIST - Proyecto Final"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "medmnist",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "student"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.01
batch-size = 32
partitioner-type = "iid"
alpha = 0.5
num-classes-per-partition = 2